fixed button alignment/color

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -121,5 +121,6 @@ img {
 #cardPlayButton{
   position:absolute;
   bottom:10%;
-  left:20%;
+  left:0;
+  right:0;
 }
